[gd_scene load_steps=15 format=2]

[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIParts/HeroLevelIndicator_Panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIParts/HeroXPBar_Panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIParts/Base_SingleHeroAbilityPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIParts/Base_HeroLevelUpButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/LevelButton_Relic.png" type="Texture" id=5]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/Hero_CenterImage.png" type="Texture" id=6]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/LevelButton_GoldXP.png" type="Texture" id=7]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/Hero_WholeScreenGUI.gd" type="Script" id=8]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/AbilityIndicator_VOL.png" type="Texture" id=9]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/AbilityIndicator_Judgement.png" type="Texture" id=10]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/GUIBackground_BodyBackground.png" type="Texture" id=11]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/GUIBackground_SideBorder.png" type="Texture" id=12]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/LevelButton_Relic_Highlighted.png" type="Texture" id=13]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroGUI_Related/GUIAssets/LevelButton_GoldXP_Highlighted.png" type="Texture" id=14]

[node name="Hero_WholeScreenGUI" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 250.0
margin_bottom = 333.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 12.0
margin_bottom = 333.0
mouse_filter = 2
texture = ExtResource( 12 )
stretch_mode = 2

[node name="ContentMarginer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 12.0
margin_right = 238.0
margin_bottom = 333.0
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_left = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/ContentMarginer"]
margin_right = 226.0
margin_bottom = 333.0
mouse_filter = 2
texture = ExtResource( 11 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ContentMarginer"]
margin_right = 226.0
margin_bottom = 333.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ContentMarginer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 216.0
margin_bottom = 323.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TopPart" type="HBoxContainer" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer"]
margin_right = 206.0
margin_bottom = 148.0
mouse_filter = 2

[node name="HeroLevelUpButton_Gold" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer/TopPart" instance=ExtResource( 4 )]
margin_top = 113.0
margin_right = 35.0
margin_bottom = 148.0
size_flags_vertical = 10
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 14 )
about_button_index_trigger = 2
define_tooltip_construction_in_button = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer/TopPart"]
margin_left = 39.0
margin_right = 167.0
margin_bottom = 148.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer/TopPart/MarginContainer"]
margin_right = 128.0
margin_bottom = 148.0
mouse_filter = 2

[node name="HeroImage" type="TextureRect" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer/TopPart/MarginContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_horizontal = 6
texture = ExtResource( 6 )

[node name="HeroXPBar_Panel" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer/TopPart/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 9.0
margin_top = 132.0
margin_right = 119.0
margin_bottom = 148.0
size_flags_horizontal = 6

[node name="HeroLevelUpButton_Relic" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer/TopPart" instance=ExtResource( 4 )]
margin_left = 171.0
margin_top = 113.0
margin_right = 206.0
margin_bottom = 148.0
size_flags_vertical = 10
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 13 )
about_button_index_trigger = 2
define_tooltip_construction_in_button = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 206.0
margin_bottom = 241.0
mouse_filter = 2
custom_constants/margin_top = 18
custom_constants/margin_bottom = 18

[node name="HeroLevelIndicator_Panel" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer/MarginContainer" instance=ExtResource( 1 )]
margin_left = 61.0
margin_top = 18.0
margin_right = 145.0
margin_bottom = 75.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/margin_left = 13

[node name="BottomPart" type="MarginContainer" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer"]
margin_top = 241.0
margin_right = 206.0
margin_bottom = 313.0
mouse_filter = 2
size_flags_vertical = 10

[node name="AbilityLightWavesButton" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer/BottomPart" instance=ExtResource( 3 )]
size_flags_horizontal = 2
size_flags_vertical = 10

[node name="AbilityJudgementButton" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer/BottomPart" instance=ExtResource( 3 )]
margin_left = 78.0
margin_right = 128.0
size_flags_horizontal = 6
size_flags_vertical = 10
ability_image = ExtResource( 10 )

[node name="AbilityVOLButton" parent="HBoxContainer/ContentMarginer/MarginContainer/VBoxContainer/BottomPart" instance=ExtResource( 3 )]
margin_left = 156.0
margin_right = 206.0
size_flags_horizontal = 10
size_flags_vertical = 10
ability_image = ExtResource( 9 )

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
margin_left = 238.0
margin_right = 250.0
margin_bottom = 333.0
mouse_filter = 2
texture = ExtResource( 12 )
stretch_mode = 2
